--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<title>JQUERY CHEAT SHEET</title>
 </head>
 <body>
