--- a/test.html
+++ b/test.html
@@ -3,6 +3,35 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<title>JQUERY CHEAT SHEET</title>
+
+	<style>
+#redSq{
+width:300px;
+height:300px;
+background:red;
+}
+
+h1{
+display:none;
+}
+
+.remove{
+display:none;
+}
+
+#ball{
+width:120px;
+height:100px;
+border-radius:50px;
+background:green;
+}
+#ball2{
+width:120px;
+height:100px;
+border-radius:50px;
+background:#00f;
+}
+</style>
 </head>
 <body>
 
