--- a/test.html
+++ b/test.html
@@ -99,5 +99,18 @@ background:#00f;
 <button id="go">&raquo; Run</button>
 <div id="block">Hello!</div>
  
+ <script>
+// Using multiple unit types within one animation.
+ 
+$( "#go" ).click(function() {
+  $( "#block" ).animate({
+    width: "70%",
+    opacity: 0.4,
+    marginLeft: "0.6in",
+    fontSize: "3em",
+    borderWidth: "10px"
+  }, 1500 );
+});
+</script>
 </body>
 </html>
